feat: 로컬 스토리지 사용자 이름 저장

--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
-ul{
+.wrapList{
     display: flex;
+    padding-top: 1rem;
 }
+
 li{
-    text-decoration: none;
+    list-style: none;
+}
+
+.removeBtn{
+    margin-left: 1rem;
 }
